# glitchlings

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  MANIFEST.in  MONSTER_MANUAL.md  PERFORMANCE_BASELINE.md  README.md  __init__.py  coverage.json  mkdocs.yml  pyproject.toml  run_gui.py  setup.cfg  test-duplication-analysis-report.md  test-naming-audit-report.md  wiki_homophones.txt
.Jules/: docent.md  gantry.md
.beads/: issues.jsonl
.claude/: settings.local.json
.github/: AGENTS.md  CLAUDE.md
assets/: ekkokin_homophones.json  lexemes.json
benchmarks/: constants.py  heterogeneous_mask_benchmark.py  pipeline_benchmark.py
dlc/: prime.py
docs/: analysis-tools.md  attack.md  build_cli_reference.py  build_glitchling_gallery.py  build_monster_manual.py  build_performance_report.py  cli.md  configuration.md  datasets.md  determinism.md  development.md  development_setup.md  gaggle-seed-derivation.md  glitchling-gallery.md  hokey_design_spec.md  index.md  integrations.md  keyboard-layouts.md  lexicon.md  metrics-acceptance-tests.md  metrics-best-practices.md  metrics-framework-README.md  metrics-framework-plan.md  monster-manual.md  performance-comparison.md  pipeline-workflows.md  release-process.md  rust_pipeline_refactor_m0.md  rust_pipeline_refactor_m1.md  rust_pipeline_refactor_m2.md  rust_pipeline_refactor_m3.md  rust_pipeline_refactor_m4.md  rust_pipeline_refactor_m5.md  rust_pipeline_refactor_m6.md  rust_pipeline_refactor_m7.md  rust_pipeline_refactor_m8.md  technical_debt.md  textual-gui.md
examples/: attack_report.py  gutenberg_analysis.py  metrics_complete_example.py  metrics_tutorial.ipynb  metrics_viz_config.yaml  nemo_datadesigner.py  spectroll_demo.py
plugins/nemo/: README.md  pyproject.toml
plugins/nemo/src/glitchlings_nemo/: __init__.py
rust/: Cargo.toml
rust/zoo/: BUFFER_REFACTOR_AUDIT.md  Cargo.toml  REFACTOR_PROGRESS.md  build.rs
rust/zoo/assets/: ekkokin_homophones.json
rust/zoo/benches/: baseline_performance.rs
rust/zoo/src/: cache.rs  ekkokin.rs  glitch_ops.rs  grammar_rules.rs  hokey.rs  homoglyphs.rs  homophones.rs  jargoyle.rs  keyboard_typos.rs  lexeme_substitution.rs  lib.rs  metrics.rs  mim1c.rs  operations.rs  pedant.rs  pipeline.rs  resources.rs  rng.rs  spectroll.rs  text_buffer.rs  typogre.rs  wherewolf.rs  word_stretching.rs  zeedub.rs  zero_width.rs
rust/zoo/tests/: buffer_roundtrip.rs
scripts/: retry_testpypi_release.sh  verify_rust_stubs.py
src/: TODO.md
tests/: MIGRATION.md  README.md  conftest.py  test_attack.py  (+38 more)
(+309 files in other folders)
