[project]
name = "glitchlings"
version = "0.1.0"
description = "Monsters for your language games."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confusable-homoglyphs>=3.3.1",
    "datasets>=4.0.0",
    "jellyfish>=1.2.0",
    "nltk>=3.9.1",
]

[project.optional-dependencies]
prime = [
    "verifiers>=0.1.3.post0",
]
dev = [
    "pytest>=8.0.0",
]
