[package]
name = "zoo_rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "_zoo_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
blake2 = { workspace = true }
smallvec = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rand = { workspace = true }

[package.metadata.maturin]
module-name = "glitchlings._zoo_rust"

[build-dependencies]
pyo3-build-config = { workspace = true }
flate2 = "1"
base64 = "0.21"
